fix: Exclude n8n folder from TypeScript compilation
- The n8n node files are not needed for the MCP server
- Excludes src/n8n/**/* from tsconfig.json
- Fixes Railway build by avoiding n8n-specific type dependencies
- MCP server functionality remains unchanged

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "src/n8n/**/*"]
 }
