fix: Set HTTP mode environment variables in Dockerfile
- Add ENV MCP_MODE=http to ensure HTTP server starts
- Add ENV USE_FIXED_HTTP=true for stable HTTP implementation
- Fixes health check failures by ensuring server runs in HTTP mode

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -69,6 +69,10 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://127.0.0.1:3000/health || exit 1
 
+# Set environment for HTTP mode
+ENV MCP_MODE=http
+ENV USE_FIXED_HTTP=true
+
 # Optimized entrypoint
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["node", "dist/mcp/index.js"]
