debug: Add simplified Dockerfile for Railway debugging
- Remove entrypoint script to isolate issues
- Remove startCommand override in railway.toml
- Add debug logging environment variables
- Increase health check start period to 30s
- This will help identify if the issue is with the entrypoint or the app itself

--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,7 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "Dockerfile.railway"
+dockerfilePath = "Dockerfile.railway-debug"
 
 [deploy]
-startCommand = "npm run start:http"
 healthcheckPath = "/health"
 healthcheckTimeout = 30
