--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -79,3 +79,8 @@ ENV AUTH_TOKEN=replace-me-in-railway-settings
 # Optimized entrypoint
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["node", "server.js"]
+
+# Healthcheck für Railway
+HEALTHCHECK --interval=10s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
+
