--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -1,86 +1,22 @@
-# Railway-compatible Dockerfile (no BuildKit cache mounts)
+# ---- Base Node image ----
+FROM node:20-alpine
 
-# Stage 1: Builder (TypeScript compilation only)
-FROM node:20-alpine AS builder
+# ---- App Directory ----
 WORKDIR /app
 
-# Copy tsconfig for TypeScript compilation
-COPY tsconfig.json ./
+# ---- Copy package.json & install deps ----
+COPY package*.json ./
+RUN npm install --production
 
-# Create minimal package.json and install ONLY build dependencies
-RUN echo '{}' > package.json && \
-    npm install --no-save typescript@^5.6.3 @types/node@^22.10.6 @types/express@^5.0.3 \
-        @modelcontextprotocol/sdk@^1.13.2 dotenv@^16.5.0 express@^5.1.0 axios@^1.7.2 \
-        n8n-workflow@^1.76.0 uuid@^10.0.0 @types/uuid@^10.0.0
+# ---- Copy project files ----
+COPY . .
 
-# Copy source and build
-COPY src ./src
-# Note: src/n8n contains TypeScript types needed for compilation
-# These will be compiled but not included in runtime
-RUN npx tsc
+# ---- Environment ----
+ENV NODE_ENV=production
+ENV PORT=3000
 
-# Stage 2: Runtime (minimal dependencies)
-FROM node:20-alpine AS runtime
-WORKDIR /app
-
-# Install only essential runtime tools
-RUN apk add --no-cache curl && \
-    rm -rf /var/cache/apk/*
-
-# Copy runtime-only package.json
-COPY package.runtime.json package.json
-
-# Install runtime dependencies without cache mount
-RUN npm install --production --no-audit --no-fund
-
-# Copy built application
-COPY --from=builder /app/dist ./dist
-
-# Copy pre-built database and required files
-COPY data/nodes.db ./data/
-COPY src/database/schema-optimized.sql ./src/database/
-COPY .env.example ./
-
-# Copy entrypoint script
-COPY docker/docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
-
-# Add container labels
-LABEL org.opencontainers.image.source="https://github.com/vredrick/n8n-mcp"
-LABEL org.opencontainers.image.description="n8n MCP Server - Runtime Only"
-LABEL org.opencontainers.image.licenses="MIT"
-LABEL org.opencontainers.image.title="n8n-mcp"
-
-# Create non-root user
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001 && \
-    chown -R nodejs:nodejs /app
-
-# Switch to non-root user
-USER nodejs
-
-# Set Docker environment flag
-ENV IS_DOCKER=true
-
-# Expose HTTP port
+# ---- Expose port ----
 EXPOSE 3000
 
-# Health check (no auth required for /health endpoint)
-HEALTHCHECK --interval=30s --timeout=10s --start-period=15s --retries=3 \
-  CMD curl -f http://127.0.0.1:3000/health || exit 1
-
-# Set environment for HTTP mode
-ENV MCP_MODE=http
-ENV USE_FIXED_HTTP=true
-ENV PORT=3000
-# Dummy token for build - should be overridden in Railway
-ENV AUTH_TOKEN=replace-me-in-railway-settings
-
-# Optimized entrypoint
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+# ---- Start server ----
 CMD ["node", "server.js"]
-
-# Healthcheck für Railway
-HEALTHCHECK --interval=10s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
-
